--- a/frontend/src/views/support/support.css
+++ b/frontend/src/views/support/support.css
@@ -5,9 +5,24 @@
     width: 84px;
     height: 84px;
     box-shadow: 0px 0px 16px 6px rgba(0,0,0,0.33);
-    background-image: 'url(https: //images.unsplash.com/photo-1577563908411-5077b6dc7624?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym90fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=900&q=60)';
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color: white;
+    background-image: url('https://openclipart.org/image/800px/307415');
     background-size: 84px;
-    border-radius: 50%;
+    border-radius: 50%; 
+}
+
+.support-window {
+    position: fixed;
+    bottom: 116px;
+    right: 24px;
+    width: 420px;
+    height: 530px;
+    max-width: 'calc(100% - 48px)';
+    max-height: 'calc(100% - 48px)';
+    background-color: white;
+    border-radius: 12px;
+    border: 2px solid #7a39e0;
+    overflow: hidden;
+    box-shadow: 0px 0px 16px 6px rgba(0,0,0,0.33);
+    
 }
