--- a/frontend/src/views/support/support.css
+++ b/frontend/src/views/support/support.css
@@ -21,8 +21,7 @@
     max-height: 'calc(100% - 48px)';
     background-color: white;
     border-radius: 12px;
-    border: 2px solid #7a39e0;
+    border: 4px solid #fee440;
     overflow: hidden;
     box-shadow: 0px 0px 16px 6px rgba(0,0,0,0.33);
-    
 }
