--- a/frontend/src/views/support/support.css
+++ b/frontend/src/views/support/support.css
@@ -6,7 +6,8 @@
     height: 84px;
     box-shadow: 0px 0px 16px 6px rgba(0,0,0,0.33);
     background-color: white;
-    background-image: url('https://openclipart.org/image/800px/307415');
+    /* background-image: url('https://openclipart.org/image/800px/307415');  */
+    background-image: url('../../assets/img/chat.png');
     background-size: 84px;
     border-radius: 50%; 
 }
